# tauri-plugin-single-instance

./: Cargo.toml  DEPENDENTS.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Source/: lib.rs
Source/platform_impl/: linux.rs  macos.rs  windows.rs
examples/emit-event/: README.md  package.json
examples/emit-event/Documentation/: index.html  modules.html
examples/emit-event/src-tauri/: Cargo.toml
examples/emit-event/src-tauri/Source/: main.rs
examples/vanilla/: package.json
examples/vanilla/Documentation/: index.html  modules.html
examples/vanilla/src-tauri/: Cargo.toml
examples/vanilla/src-tauri/Source/: main.rs
src/: lib.rs
