[dependencies]
tauri = { version = "1" }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Ensure a single instance of your tauri app is running."
edition = "2021"
exclude = ["/examples"]
license-file = "LICENSE"
name = "tauri-plugin-single-instance"
rust-version = "1.60"
version = "0.0.0"

[target]

[target.'cfg(target_os = "linux")']

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3"

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
features = [
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]
version = "0.42"
