[dependencies]
tauri = { version = "2" }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Ensure a single instance of your tauri app is running."
edition = "2024"
exclude = ["/examples"]
license-file = "LICENSE"
name = "tauri-plugin-single-instance-read-only"
rust-version = "1.85.0"
version = "0.0.0"

[target]

[target.'cfg(target_os = "linux")']

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
features = [
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]
version = "0.59"
