[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tauri = { version = "2", features = ["api-all"] }
tauri-plugin-single-instance = { version = "2.2.1" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[package]
authors = [ "You" ]
description = "A Tauri App"
edition = "2024"
name = "tauri-plugin-single-instance-example-vanilla"
repository = ""
rust-version = "1.85.0"
version = "0.1.0"

[[bin]]
name = "app"
path = "Source/main.rs"
